--- a/gameapp/templates/index.html
+++ b/gameapp/templates/index.html
@@ -1,10 +1,38 @@
-<html>
+{% extends 'base.html' %}
 
+{% block headercss %}
+ <link href="{{STATIC_URL}}css/homepage.css" rel="stylesheet" type="text/css" />
+<style>
+.form {
+	width: 300px;
+	border:1px solid red;
+	margin: -180px auto 180px auto;
+	padding-left: 50px;
+}
 
+</style>
+{% endblock %}
 
+{% block headerjs %}
+{% endblock %}
 
-<body>
-<img src="{{STATIC_URL}}img/coins.png"/>
+{% block header %}
+{% endblock %}
 
-</body>
-</html>
+{% block content %} 
+<div class='hero-container'>
+	<a href="select.html"><img class="hero" src="{{STATIC_URL}}img/mainpage.png"/></a>
+	<form class="form" method='GET' action='select/'>
+		<select name="school">
+			<option> MIT Undergrad </option>
+			<option> UPenn Undergrad</option>
+			<option> Harvard Undergrad</option>
+			<option> MIT Professor </option>
+			<option> I'm an Angel</option>
+			<option> I'm a VC </option>
+		</select>
+		<button class="btn btn-large btn-info "> LET'S PLAY</button>
+	</form>
+</div>
+<div class="clear"></div>
+{% endblock %}
