--- a/static/css/bubbles.css
+++ b/static/css/bubbles.css
@@ -1,7 +1,7 @@
 .bubblex {
     width: 60px;
     height: 60px;
-    background: url("../images/money.png");
+    background: url("../img/money.png");
     border-radius: 200px;
     -moz-border-radius: 200px;
     -webkit-border-radius: 200px;
