--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,6 @@
+/****************/
 /*CSS Resetting */
+/****************/
 
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
 	padding: 0;
@@ -30,14 +32,53 @@ q:before,q:after {
 	}
 abbr,acronym { border: 0;
 	}
-
+	
+/******************/
 /*Global Settings */
+/******************/
+
 body {
 	background: #f1f1f1 url("../images/paperbg.png");
-	text-align: left;
 	font-family: Open Sans,Helvetica,Arial,sans-serif;
 }
 
 .clear {
 	clear: both;
+}
+.main-container {
+	width: 960px;
+	margin: 0 auto;
+}
+
+/*********/
+/*Header */
+/*********/
+
+.header {
+	margin: 10px 0 5px 0;
+	height: 50px;
+}
+.logo {
+	float: left;
+}
+.nav {
+	float: right;
+	margin-top: 13px;
+	opacity: .8;
+}
+
+/**********/
+/* Footer */
+/**********/
+.footer {
+	margin: 10px auto;
+	text-align: center;
+	font-size: 12px;
+}
+.footer p {
+	text-align: center;
+	color: #999;
+}
+.footer p a {
+
 }
