--- a/static/css/play.css
+++ b/static/css/play.css
@@ -1,18 +1,5 @@
-
-.main-container {
-	max-width: 900px;
-	margin: 0 auto;
-}
-.header {
+.play-container {
 	margin: 30px 0;
-}
-.logo {
-	float: left;
-}
-.nav {
-	float: right;
-	margin-top: 13px;
-	opacity: .8;
 }
 .prompt {
 	background: white;
@@ -26,9 +13,9 @@
 }
 .prompt .question {
 	font-size: 18px;
-	line-height: 30px;
+	line-height: 26px;
 	font-weight: 500;
-	margin: 20px; 
+	margin: 20px;
 }
 .great {
 	color: green;
@@ -36,7 +23,12 @@
 .fail {
 	color: red;
 }
+.vc {
+	float: right;
+	width: 220px;
+}
 .nerd {
 	float: left;
 	width: 200px;
+	margin-left: 15px;
 }
