--- a/gameapp/templates/game.html
+++ b/gameapp/templates/game.html
@@ -4,6 +4,7 @@
 <script>
 var static_url = {{STATIC_URL}};
 var imgurl = "{{STATIC_URL}}img/{{img}}"
+var gameid = {{ gameid }}
 </script>
 <script src="{{STATIC_URL}}js/gameplay.js"></script>
 <script>
@@ -12,7 +13,8 @@ $(document).ready(function() {
 		$.get("/result/", { 
 			'questionsAsked':questionsAsked.toString(), 
 			'pointvalues':pointvalues.toString(), 
-			'meterValue':meterValue.toString()},
+			'meterValue':meterValue.toString(),
+			'gameid':gameid.toString()},
 			function(data) {
 				$('.game-container').css('display','none');
 				$('.resultsdiv').append(data);
