--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -7,6 +7,8 @@
 	border:2px solid #ccc;
 	margin: 80px 0 10px 0;
 	box-shadow: 0 0 2px #333;
+	position: relative;
+	z-index: 0;
 }
 .credits {
 	text-align: center;
@@ -22,4 +24,17 @@
 	font-size: 30px;
 	line-height: 60px;
 	color: #ddd;
+}
+.form {
+	width: 250px;
+	text-align: center;
+	border:1px solid red;
+	position: absolute;
+	z-index: 10;
+	top: 360px;
+	left: 510px;
+	padding: 10px 0;
+	border-radius: 10px;
+	border:1px solid #ccc;
+	background: #f4f4f4;
 }
