--- a/gameapp/templates/talk.html
+++ b/gameapp/templates/talk.html
@@ -13,7 +13,7 @@
 		<img class="nerd" src='{{STATIC_URL}}img/{{ img }}' />
 		<p class="question">Your goal is to decide how good the idea is. You only have time to ask the right 10 questions.
 		After each question, use the Invest-o-Meter to change how much you like the company, for better or worse. If you ask
-		the right questions and correctly determine how each question affects the company's success, you can reach a high score and keep
+		the right questions and correctly determine how each question affects the company's investment potential, you can reach a high score and keep
 		your status as top dog in the VC community. </p>
 		<a href="/game/{{gameid}}" class="btn btn-success btn-large"> Start asking questions</a>
 	</div>
