--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,7 +38,7 @@ abbr,acronym { border: 0;
 /******************/
 
 body {
-	background: #f1f1f1 url("../images/paperbg.png");
+	background: #f1f1f1 url("../img/paperbg.png");
 	font-family: Open Sans,Helvetica,Arial,sans-serif;
 }
 
