--- a/gameapp/templates/select.html
+++ b/gameapp/templates/select.html
@@ -15,19 +15,19 @@
 		<h1> Brush.io</h1>
 		<h2> The future of toothbrushes</h2>
 		<img class="nerd" src='{{STATIC_URL}}img/cartoonnerdfeathered.png' />
-		<h3 class="easy">Easy</h3>
+		<h3 class="easy">Play Now!</h3>
 	</div></a>
-	<a href='/play/2'><div class="game well">
+	<a><div class="game well disable">
 		<h1> MambaTech</h1>
 		<h2> Fashion shorts for fashionistas</h2>
 		<img class="nerd" src='{{STATIC_URL}}img/fashiongirlfeathered.png' />
-		<h3 class="medium">Medium</h3>
+		<h3 class="medium">Coming Soon . . .</h3>
 	</div></a>
-	<a href='/play/3'><div class="game well">
+	<a><div class="game well disable">
 		<h1> Kerplunk</h1>
 		<h2> How you like them apples</h2>
-		<img src='{{STATIC_URL}}img/larryfeathered.png' />
-		<h3 class="hard">Hard</h3>
+		<img class="nerd" src='{{STATIC_URL}}img/larryfeathered.png' />
+		<h3 class="hard">Coming Soon . . . </h3>
 	</div></a>
 	<div class="clear"></div>
 </div>
