--- a/static/css/game.css
+++ b/static/css/game.css
@@ -1,5 +1,5 @@
 .btn-orange { background-color: hsl(0, 0%, 27%) !important; background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#777777", endColorstr="#444444"); background-image: -khtml-gradient(linear, left top, left bottom, from(#777777), to(#444444)); background-image: -moz-linear-gradient(top, #777777, #444444); background-image: -ms-linear-gradient(top, #777777, #444444); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #777777), color-stop(100%, #444444)); background-image: -webkit-linear-gradient(top, #777777, #444444); background-image: -o-linear-gradient(top, #777777, #444444); background-image: linear-gradient(#777777, #444444); border-color: #444444 #444444 hsl(0, 0%, 22%); color: #fff !important; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33); -webkit-font-smoothing: antialiased; }
-
+.btn-blue { background-color: hsl(207, 37%, 39%) !important; background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6f9abd", endColorstr="#3e6788"); background-image: -khtml-gradient(linear, left top, left bottom, from(#6f9abd), to(#3e6788)); background-image: -moz-linear-gradient(top, #6f9abd, #3e6788); background-image: -ms-linear-gradient(top, #6f9abd, #3e6788); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6f9abd), color-stop(100%, #3e6788)); background-image: -webkit-linear-gradient(top, #6f9abd, #3e6788); background-image: -o-linear-gradient(top, #6f9abd, #3e6788); background-image: linear-gradient(#6f9abd, #3e6788); border-color: #3e6788 #3e6788 hsl(207, 37%, 34%); color: #fff !important; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33); -webkit-font-smoothing: antialiased; }
 .game-container {
 	clear: both;
 }
@@ -215,7 +215,7 @@ background-image: linear-gradient(to bottom, #C7F6FF 0%, #6EC0FF 30%, #54BBEF 10
 	height: 35px;
 	line-height: 35px;
 	font-size: 15px;
-	padding-left: 15px;
+	padding-left: 10px;
 	background: #fff;
 	border-right:1px solid #ccc;
 	border-left:1px solid #ccc;
@@ -272,6 +272,8 @@ background-image: linear-gradient(to top, #FFFFFF 0%, #E0E0E0 100%);
 	width: 200px;
 	padding: 3px;
 	height: 50px;
+	font-size:13px;
+	line-height: 15px;
 }
 .question-button-container .linethrough {
 	text-decoration: line-through;
@@ -414,4 +416,7 @@ background-image: linear-gradient(to top, #FFFFFF 0%, #E0E0E0 100%);
 }
 .noeffect {
 	margin: 0 10px;
+}
+.noimpact-container {
+	margin: 20px 0 0 15px;
 }
