--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,14 +1,13 @@
-.hero-container {
-	text-align: center;
-}
 
-.hero {
-	width: 90%;
+
+.hero-container {
+	width: 900px;
+	height: 480px;
 	border:2px solid #ccc;
-	margin: 80px 0 10px 0;
+	margin: 40px auto 10px auto;
 	box-shadow: 0 0 2px #333;
-	position: relative;
-	z-index: 0;
+	padding: 0px;
+	background: url('../img/mainpage.png');
 }
 .credits {
 	text-align: center;
@@ -27,12 +26,10 @@
 }
 .form {
 	width: 250px;
+	margin-left: 440px;
+	margin-top: 300px;
 	text-align: center;
 	border:1px solid red;
-	position: absolute;
-	z-index: 10;
-	top: 360px;
-	left: 510px;
 	padding: 10px 0;
 	border-radius: 10px;
 	border:1px solid #ccc;
