--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,3 +88,4 @@ body {
 .footer p a {
 
 }
+.btn-blue { background-color: hsl(207, 37%, 39%) !important; background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6f9abd", endColorstr="#3e6788"); background-image: -khtml-gradient(linear, left top, left bottom, from(#6f9abd), to(#3e6788)); background-image: -moz-linear-gradient(top, #6f9abd, #3e6788); background-image: -ms-linear-gradient(top, #6f9abd, #3e6788); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6f9abd), color-stop(100%, #3e6788)); background-image: -webkit-linear-gradient(top, #6f9abd, #3e6788); background-image: -o-linear-gradient(top, #6f9abd, #3e6788); background-image: linear-gradient(#6f9abd, #3e6788); border-color: #3e6788 #3e6788 hsl(207, 37%, 34%); color: #fff !important; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33); -webkit-font-smoothing: antialiased; }
