--- a/static/css/result.css
+++ b/static/css/result.css
@@ -1,3 +1,69 @@
+.btn-blue {
+/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #38D0E0 0%, #00A3EF 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #38D0E0 0%, #00A3EF 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #38D0E0 0%, #00A3EF 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #38D0E0), color-stop(1, #00A3EF));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #38D0E0 0%, #00A3EF 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #38D0E0 0%, #00A3EF 100%);
+}
+.bar {
+	width: 812px;
+	margin: 0 auto;
+	height: 80px;
+	border-bottom:1px solid #eee;
+	position: relative;
+}
+.baritem {
+	width: 50px;
+	height: 50px;
+	margin: 0 30px;
+	position: absolute;
+	border-top-right-radius: 8px;
+	border-top-left-radius: 8px;
+	border:1px solid #eee;
+	border-bottom: none;
+	bottom: 0;
+	color: #333;
+}
+.baritem p {
+	margin-top: -20px;
+	color: #666;
+}
+.bartext {
+	text-align: center;
+	width: 800px;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+.bartext p {
+	width: 100px;
+	text-align: center;
+	color: #888;
+	padding-top: 3px;
+	font-size: 13px;
+	font-weight: 300;
+	float: left;
+}
+
+.baritem1 {left: 0;}
+.baritem2 {left: 100px;height: 20px;}
+.baritem3 {left: 200px; height: 10px;}
+.baritem4 {left: 300px;}
+.baritem5 {left: 400px;}
+.baritem6 {left: 500px;}
+.baritem7 {left: 600px;}
+.baritem8 {left: 700px;}
 .main-result {
 	border:1px solid transparent;
 }
@@ -82,6 +148,13 @@ h6 {
 	margin-left: 20px;
 	margin-top: 5px;
 }
+.response {
+	font-weight: 500;
+	color: #666;
+	margin-top: 0px;
+	line-height: 25px;
+	margin-bottom: 0px;
+}
 
 .motivate {
 	display: none;
@@ -108,6 +181,10 @@ h6 {
 .playagain {
 	text-align: center;
 	padding: 20px 20px;
+	font-weight: 300;
+}
+.playagain p span {
+	font-weight: 900;
 }
 .playbutton {
 	display:none;
